Added valve inspection fields to bottom of frmCreateWO and made them appear/disappear based on asset selected.

--- a/lua_widget_m4_info.properties
+++ b/lua_widget_m4_info.properties
@@ -1,5 +1,5 @@
 #This file contains the lua m4Constants, the widgetQualifying ids and the type of the widget
-#Tue May 27 23:06:20 EDT 2014
+#Wed May 28 01:52:30 EDT 2014
 ~|~frmDowntime.HBox0c75f81874c1f42=box
 ~|~frmValveInspection.HBox0b56740eae09645=box
 ~|~popTimePicker.CopyButton0bcf4d218cf034e=button
@@ -17,6 +17,7 @@
 ~|~frmEditActiveWO.CopyLabel06d31378aace348=label
 ~|~frmValveInspection.CopyTextField0da51ecca6a4e4f=textbox2
 ~|~popChangeWOStatus.CopyLabel0c6177723e9dd4a=label
+~|~frmCreateWO.label1568159912504315=label
 ~|~popAttachments.VBox0a610f2a352e645=box
 ~|~frmViewActiveWO.navMoreInfo=button
 ~|~frmViewAwaitingWO.CopyLabel0933d517e58f64b=label
@@ -50,9 +51,11 @@
 ~|~popupInstrument.hbx2=box
 ~|~popupInstrument.hbx1=box
 ~|~frmViewMoreInfo.CopyLabel0a085706adae14a=label
+~|~frmCreateWO.hbox1568159912511706=box
 ~|~frmDowntime.navActiveWorkOrders=button
 ~|~frmViewAwaitingWO.CopyHBox043a43f721e3f44=box
 ~|~frmDowntime.CopyLabel0b1d9abb0f3424a=label
+~|~frmCreateWO.swiLocked=switch
 ~|~popupSubEquipment.hbxButtons=box
 ~|~frmValveInspection.CopyHBoxproblemCode04cda06a15b5a49=box
 ~|~frmCreateWO=form2
@@ -81,9 +84,12 @@
 ~|~frmValveInspection.VBox0bd8762f0a53949=box
 ~|~frmValveInspection.CopyLabel0838d9a65e2e94f=label
 ~|~frmDowntime.CopyLabel040b4f784ab644c=label
+~|~frmCreateWO.label1568159912511708=label
+~|~frmCreateWO.lblTruncatedValveComment=label
 ~|~frmViewMoreInfo.CopyButton06217ec4133174a=button
 ~|~popupGGS.CopyButton028570489d35040=button
 ~|~popAttachments.Button0dfb95bb959a149=button
+~|~frmCreateWO.hbox1568159912522218=box
 ~|~popDueDateFilter.CopyHBox087eed2ceed8d4a=box
 ~|~frmCreateWO.CopyLabel06efe9974c73144=label
 ~|~frmEditActiveWO.CopyLabel02e43cd9934c445=label
@@ -94,7 +100,6 @@
 ~|~frmApprovalWOList.navMoreInfo=button
 ~|~popChangeWOStatus.CopyLabel0ed6873da74f04c=label
 ~|~frmActiveWOList.btnDueDateFilter=button
-~|~frmCreateWO.Label0aca6fe3597e941=label
 ~|~frmApprovalWOList.navDowntime=button
 ~|~frmViewActiveWO.CopyHBox068511e508f094c=box
 ~|~frmValveInspection.CopyHBoxproblemCode007f91ffe198846=box
@@ -105,8 +110,10 @@
 ~|~frmDowntime.hboxMain=box
 ~|~frmViewAwaitingWO.navAwaitingApproval=button
 ~|~frmMoreInfoList.navMoreInfo=button
+~|~frmCreateWO.label1568159912522220=label
 ~|~frmViewAwaitingWO.hboxMain=box
 ~|~frmMoreInfoList.navDowntime=button
+~|~frmCreateWO.cbxPriority=combobox
 ~|~frmEditActiveWO.CopyLabel0b49c2022ced747=label
 ~|~popupInstrument=popup
 ~|~frmActiveWOList.Segment01e92683e273f49=segment2
@@ -131,6 +138,7 @@
 ~|~frmEditActiveWO.CopyLabel017435858ee574e=label
 ~|~popLocationFilter=popup
 ~|~frmViewActiveWO.CopyLabel0783a75e697474d=label
+~|~frmCreateWO.label1568159912503855=label
 ~|~frmCreateWO.CopyHBoxproblemCode0250d62d0c60b47=box
 ~|~frmCreateWO.hboxAfterTheFactSwitch=box
 ~|~frmViewMoreInfo.CopyHBox08f44f5d749384d=box
@@ -150,6 +158,7 @@
 ~|~frmEditActiveWO.CopyHBoxproblemCode08bca32c8dca142=box
 ~|~frmValveInspection.CopyTextField0172af93a903d4b=textbox2
 ~|~frmViewActiveWO.Button0b6a1c72615e449=button
+~|~frmCreateWO.hbox1568159912522866=box
 ~|~frmMoreInfoList.CopyVBox05c46e1637ddc4d=box
 ~|~frmDowntime.CopyComboBox0c4d3e9e37f1c49=combobox
 ~|~frmViewMoreInfo.CopyLabel0752fd18ea8df40=label
@@ -177,6 +186,7 @@
 ~|~frmDowntime.vboxNav=box
 ~|~frmDowntime.CopyLabel01fffc95784aa41=label
 ~|~frmCreateWO.hboxRemedyCode=box
+~|~frmCreateWO.label1568159912522868=label
 ~|~frmViewActiveWO.CopyLabel07d69d6b7710441=label
 ~|~frmCreateWO.VBox0ae5e302cb95148=box
 ~|~frmValveInspection.Button0435c6286129d44=button
@@ -191,6 +201,7 @@
 ~|~frmViewMoreInfo=form2
 ~|~frmDowntime.CopyLabel07718c2ae276c41=label
 ~|~popWOApproval.CopyLabel03190e30a9e724f=label
+~|~frmCreateWO.calInspectionDate=calendar
 ~|~popChangeWOStatus.HBox062dc4158474f4c=box
 ~|~popupEquipment.hbx6=box
 ~|~popupEquipment.hbx5=box
@@ -258,6 +269,7 @@
 ~|~frmMainMenu.navMoreInfo=button
 ~|~frmCreateWO.Button0862f8d887ce641=button
 ~|~frmValveInspection.CopyHBox04af345a7673e49=box
+~|~frmCreateWO.hbox1568159912529054=box
 ~|~frmApprovalWOList.CopyVBox0e0301e03413642=box
 ~|~frmViewAwaitingWO.navMoreInfo=button
 ~|~frmMainMenu.navDowntime=button
@@ -282,10 +294,11 @@
 ~|~popPriorityFilter.label1568159912380696=label
 ~|~frmDowntime.CopyComboBox016d1a42b6bde43=combobox
 ~|~popupSubEquipment.hbx7=box
+~|~frmCreateWO.lblTruncatedDescription=label
 ~|~popupSubEquipment.hbx6=box
 ~|~popupSubEquipment.hbx5=box
-~|~popupSubEquipment.hbx4=box
 ~|~popLongdesc=popup
+~|~popupSubEquipment.hbx4=box
 ~|~popupSubEquipment.hbx3=box
 ~|~popupSubEquipment.hbx2=box
 ~|~popupSubEquipment.hbx1=box
@@ -294,8 +307,9 @@
 ~|~frmValveInspection=form2
 ~|~frmValveInspection.CopyHBox012bf2ca78f6141=box
 ~|~popChangeWOStatus.CopyLabel0004a850eaf7e49=label
+~|~frmCreateWO.label1568159912529056=label
 ~|~frmDowntime.CopyComboBox0ca55874d262141=combobox
-~|~frmCreateWO.ComboBox0062ed8347b8446=combobox
+~|~frmCreateWO.cbxRemedyCode=combobox
 ~|~frmActiveWOList.btnPriorityFilter=button
 ~|~frmViewMoreInfo.CopyLabel0f2d8e5c336284d=label
 ~|~frmDowntime.navAwaitingApproval=button
@@ -317,9 +331,9 @@
 ~|~popWOApproval.CopyButton0b8f8cdb5485741=button
 ~|~frmEditActiveWO.CopyButtonScanbarcode0b62a166cd65640=button
 ~|~popLocationFilter.CopyButton0d1454a321f8845=button
-~|~frmCreateWO.CopyComboBox044e2ed2adaa347=combobox
-~|~frmViewActiveWO.CopyHBox08795aff42c2347=box
+~|~frmCreateWO.hbox1568159912509221=box
 ~|~popLongdesc.Label0b2456e8425e14c=label
+~|~frmViewActiveWO.CopyHBox08795aff42c2347=box
 ~|~frmViewActiveWO.Button08d29ce5c44a44b=button
 ~|~frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
 ~|~popupArea.CopyHBox03c50b568f6cf4d=box
@@ -331,11 +345,13 @@
 ~|~frmViewActiveWO.CopyLabel0b3fdd781891947=label
 ~|~frmCreateWO.navCreateWorkOrder=button
 ~|~Temp09e2ddd70484a43=header
+~|~frmCreateWO.swiLubricated=switch
 ~|~frmViewAwaitingWO.navActiveWorkOrders=button
 ~|~popupFacility.hbxButtons=box
 ~|~frmViewMoreInfo.Label027fba225f4ab44=label
 ~|~frmCreateWO.CopyLabel01313c791ff954c=label
 ~|~frmCreateWO.hboxCauseCode=box
+~|~frmCreateWO.label1568159912509223=label
 ~|~frmMainMenu.hboxMain=box
 ~|~frmViewMoreInfo.CopyHBox0611ef625d1b346=box
 ~|~popChangeWOStatus.RadioButtonGroup0ec7239fce7c242=radiobuttongroup
@@ -343,8 +359,8 @@
 ~|~frmViewActiveWO.HBox087a589b4e64d49=box
 ~|~frmDowntime.CopyLabel01f62ce85e2914f=label
 ~|~frmMoreInfoList=form2
-~|~frmViewActiveWO.VBox08a3358600dc841=box
 ~|~popLongdesc.CopyButton0f2d885d0009140=button
+~|~frmViewActiveWO.VBox08a3358600dc841=box
 ~|~popDueDateFilter.label1568159912380696=label
 ~|~popWOApproval.CopytxtComment0f1009f615f5e46=textarea2
 ~|~frmViewMoreInfo.vboxNav=box
@@ -366,6 +382,7 @@
 ~|~frmDowntime.CopyLabel07088c5013f9142=label
 ~|~frmEditActiveWO.CopyButton0f8ce1e3199d448=button
 ~|~frmDowntime.navDowntime=button
+~|~frmCreateWO.txtInspectorName=textbox2
 ~|~frmDowntime.Button04d8b6375b2ef41=button
 ~|~frmDowntime.CopyHBoxproblemCode06373760f48384a=box
 ~|~popupInstrument.hbxButtons=box
@@ -376,10 +393,9 @@
 ~|~CopyHBox05ab541b50c7444=box
 ~|~popLocationFilter.label1568159912388250=label
 ~|~frmEditActiveWO.CopyButtonScanbarcode04465f98f4f8c40=button
-~|~frmCreateWO.ComboBox0c5169188404d4d=combobox
 ~|~HBox05936750fff9f49.Label0b7d0cd6882d349=label
-~|~frmActiveWOList.navCreateWorkOrder=button
 ~|~popLocationFilter.CopyHBox087eed2ceed8d4a=box
+~|~frmActiveWOList.navCreateWorkOrder=button
 ~|~popupSubEquipment.seg=segment2
 ~|~popTimePicker=popup
 ~|~popupInstrument.lbl8=label
@@ -392,6 +408,7 @@
 ~|~popupInstrument.lbl1=label
 ~|~frmValveInspection.CopyComboBox0b9f886476ef04d=combobox
 ~|~frmValveInspection.CopyLabel0b2416cfad20d4e=label
+~|~frmCreateWO.cbxOperatingCondition=combobox
 ~|~frmValveInspection.CopyLabel006a0caa30f0040=label
 ~|~frmValveInspection.CopyLabel011d19559ba1048=label
 ~|~frmViewActiveWO.CopyLabel0dc86a909f31942=label
@@ -413,13 +430,13 @@
 ~|~popChangeWOStatus.HBox0a4ec2ca4e08040=box
 ~|~frmActiveWOList.navDowntime=button
 ~|~frmEditActiveWO.CopyButton04cbc104ee3b949=button
-~|~frmCreateWO.CopyComboBox066b2a180a53c42=combobox
 ~|~frmEditActiveWO.CopyHBoxproblemCode092079a6a536a4e=box
 ~|~frmValveInspection.CopyTextField09429de9ec5b14d=textbox2
 ~|~popLocationFilter.CopyButton0bcf4d218cf034e=button
 ~|~frmViewActiveWO.CopyHBox02268996263ad43=box
 ~|~frmDowntime.ComboBox01868aea2e88547=combobox
 ~|~frmValveInspection.CopyTextField0ef96ea43eb0249=textbox2
+~|~frmCreateWO.button1568159912529060=button
 ~|~frmCreateWO.cbxWorkCategory=combobox
 ~|~frmDowntime.Button05f3f42155ca948=button
 ~|~frmEditActiveWO.CopyLabel0606f8d47cfa740=label
@@ -480,6 +497,7 @@
 ~|~frmActiveWOList.hboxMain=box
 ~|~frmViewMoreInfo.CopyLabel098b20d3da7094d=label
 ~|~popupFacility.CopyButton028570489d35040=button
+~|~frmCreateWO.cbxProblemCode=combobox
 ~|~frmCreateWO.CopyComboBox0e3d53e26078543=combobox
 ~|~popupSubEquipment.CopyButton0ccfb73b5615340=button
 ~|~frmViewAwaitingWO.CopyLabel00f77a45ee9e548=label
@@ -504,7 +522,9 @@
 ~|~frmDowntime.navCreateWorkOrder=button
 ~|~popLocationFilter.hbox1568159912380697=box
 ~|~frmMoreInfoList.Segment06653d08601054e=segment2
+~|~frmCreateWO.hbxValveInspection=box
 ~|~frmEditActiveWO.navAwaitingApproval=button
+~|~frmCreateWO.vbox1568159912503854=box
 ~|~popLongdesc.VBox049a8fca94aba47=box
 ~|~frmValveInspection.CopyLabel044b12f557bcf46=label
 ~|~frmValveInspection.CopyComboBox0f2eeb744183b4a=combobox
@@ -560,8 +580,8 @@
 ~|~popupSubEquipment.CopyButton028570489d35040=button
 ~|~popWOApproval.CopyRadioButtonGroup04790a00f681f48=radiobuttongroup
 ~|~frmApprovalWOList.navAwaitingApproval=button
-~|~frmCreateWO.hboxTitle=box
 ~|~popLongdesc.HBox02b07e2e0911b45=box
+~|~frmCreateWO.hboxTitle=box
 ~|~popupEquipment.lbl6=label
 ~|~popupEquipment.lbl5=label
 ~|~popupEquipment.lbl4=label
@@ -570,12 +590,14 @@
 ~|~frmEditActiveWO.vboxNav=box
 ~|~popupEquipment.lbl1=label
 ~|~frmEditActiveWO.CopyLabel0e6b4ba6a0c7b42=label
+~|~frmCreateWO.hbox1568159912504313=box
 ~|~frmMainMenu.vboxNav=box
 ~|~popupFacSubsys.lbl5=label
 ~|~popupFacSubsys.lbl4=label
 ~|~popupFacSubsys.lbl3=label
 ~|~frmViewAwaitingWO.CopyHBox08b4357c544c342=box
 ~|~popupFacSubsys.lbl2=label
+~|~frmCreateWO.cbxCauseCode=combobox
 ~|~popupFacSubsys.lbl1=label
 ~|~frmValveInspection.CopyHBox0ba7f6079ac4341=box
 ~|~popupFacility.lbl3=label
