--- a/widgetinfo.properties
+++ b/widgetinfo.properties
@@ -1,5 +1,5 @@
 #
-#Tue May 27 23:06:20 EDT 2014
+#Wed May 28 01:52:30 EDT 2014
 tablet$0$frmViewMoreInfo.CopyLabel08691d38a20c54c=label
 tablet$0$frmApprovalWOList.navMoreInfo=button
 tablet$0$frmViewMoreInfo.CopyHBox0620cdd4316d042=box
@@ -8,6 +8,7 @@ tablet$0$popChangeWOStatus=popup
 tablet$0$frmViewActiveWO.CopyHBox05b1a6322d91c4d=box
 tablet$0$frmViewAwaitingWO.CopyLabel0f2d8e5c336284d=label
 tablet$0$frmViewActiveWO.navCreateWorkOrder=button
+tablet$0$frmCreateWO.cbxOperatingCondition=combobox
 tablet$0$popChangeWOStatus.HBox062dc4158474f4c=box
 tablet$0$popChangeWOStatus.CopyLabel0ed6873da74f04c=label
 tablet$0$frmViewMoreInfo.txtarMoreInfo=textarea2
@@ -24,6 +25,7 @@ tablet$0$popAttachments.CopyButton08b2f6dc0164346=button
 tablet$0$frmViewMoreInfo.Label027fba225f4ab44=label
 tablet$0$frmCreateWO.CopyLabel01313c791ff954c=label
 tablet$0$popupSubEquipment.hbx7=box
+tablet$0$frmCreateWO.cbxPriority=combobox
 tablet$0$popupSubEquipment.hbx6=box
 tablet$0$popupSubEquipment.hbx5=box
 tablet$0$popDueDateFilter.hbox1568159912380697=box
@@ -61,7 +63,6 @@ tablet$0$frmEditActiveWO.CopyHBoxproblemCode07907a4075bf645=box
 tablet$0$frmDowntime.VBox0a71adbbfd3494c=box
 tablet$0$frmDowntime.CopyButton06fee5ba6afb947=button
 tablet$0$popChangeWOStatus.HBox014cab542fe3d42=box
-tablet$0$frmCreateWO.ComboBox0c5169188404d4d=combobox
 tablet$0$frmValveInspection.CopyHBoxproblemCode04cda06a15b5a49=box
 tablet$0$frmValveInspection.CopyLabel04691df3e4a5048=label
 tablet$0$frmValveInspection.CopyHBox000071a938b4f4d=box
@@ -76,6 +77,7 @@ tablet$0$frmViewAwaitingWO.Button0698bbc9e4f1746=button
 tablet$0$frmCreateWO.CopyButton07b4dc01acbe946=button
 tablet$0$frmCreateWO.CopyButton00efc277a014444=button
 tablet$0$frmViewAwaitingWO.CopyHBox054a7688c99f04c=box
+tablet$0$frmCreateWO.cbxProblemCode=combobox
 tablet$0$frmViewActiveWO.CopyLabel04eb1ca1ff91947=label
 tablet$0$frmValveInspection.Button03a4b925a66854f=button
 tablet$0$frmMainMenu.hboxMain=box
@@ -86,6 +88,7 @@ tablet$0$frmDowntime.ComboBox01868aea2e88547=combobox
 tablet$0$frmViewActiveWO.CopyHBox08795aff42c2347=box
 tablet$0$frmApprovalWOList.navCreateWorkOrder=button
 tablet$0$frmEditActiveWO.CopyComboBox08681cb77f0ea4e=combobox
+tablet$0$frmCreateWO.hbox1568159912504313=box
 tablet$0$frmValveInspection.CopyTextField0172af93a903d4b=textbox2
 tablet$0$frmValveInspection.CopyHBox0c8e31857ed904e=box
 tablet$0$frmViewAwaitingWO.CopyLabel041c1b738c2ad44=label
@@ -107,6 +110,7 @@ tablet$0$frmMainMenu.navDowntime=button
 tablet$0$popupSubEquipment.seg=segment2
 tablet$0$frmViewMoreInfo.CopyHBox01dce313e08ef4b=box
 tablet$0$frmValveInspection.CopyLabel08ffa363d9fc546=label
+tablet$0$frmCreateWO.calInspectionDate=calendar
 tablet$0$frmDowntime.CopyLabel09cb1d3e97e584b=label
 tablet$0$frmActiveWOList.btnLocationFilter=button
 tablet$0$frmApprovalWOList.navActiveWorkOrders=button
@@ -149,6 +153,7 @@ tablet$0$popAttachments.VBox0a610f2a352e645=box
 tablet$0$frmViewAwaitingWO.CopyHBox0620cdd4316d042=box
 tablet$0$popWOApproval.CopytxtComment0f1009f615f5e46=textarea2
 tablet$0$popDueDateFilter.CopyButton0d1454a321f8845=button
+tablet$0$frmCreateWO.hbox1568159912511706=box
 tablet$0$popupArea.seg=segment2
 tablet$0$frmApprovalWOList.CopyVBox0e0301e03413642=box
 tablet$0$frmCreateWO.navCreateWorkOrder=button
@@ -158,8 +163,8 @@ tablet$0$frmCreateWO.CopyLabel04c54fb2075b049=label
 tablet$0$frmDowntime.navActiveWorkOrders=button
 tablet$0$frmEditActiveWO.CopyLabel06d31378aace348=label
 tablet$0$popupInstrument.CopyButton0ccfb73b5615340=button
-tablet$0$frmViewActiveWO.CopyHBox07b6c0248cb0247=box
 tablet$0$popLongdesc.CopyButton0f2d885d0009140=button
+tablet$0$frmViewActiveWO.CopyHBox07b6c0248cb0247=box
 tablet$0$frmCreateWO.hboxProblemCode=box
 tablet$0$popDueDateFilter.label1568159912380696=label
 tablet$0$popLocationFilter.label1568159912388250=label
@@ -178,12 +183,12 @@ tablet$0$frmCreateWO.cbxWorkSubtype=combobox
 tablet$0$frmEditActiveWO.navAwaitingApproval=button
 tablet$0$frmCreateWO.hboxWorkSubcategory=box
 tablet$0$frmEditActiveWO.navCreateWorkOrder=button
-tablet$0$frmCreateWO.CopyComboBox044e2ed2adaa347=combobox
 tablet$0$frmCreateWO.navActiveWorkOrders=button
 tablet$0$popLongdesc.HBox02b07e2e0911b45=box
 tablet$0$frmCreateWO.CopyLabel0df4ce4c5db2440=label
 tablet$0$frmViewActiveWO.navActiveWorkOrders=button
 tablet$0$frmValveInspection.CopyHBox04348cff9abdf4b=box
+tablet$0$frmCreateWO.hbox1568159912522218=box
 tablet$0$frmActiveWOList.lblDueDateFilter=label
 tablet$0$frmViewMoreInfo.CopyLabel0a085706adae14a=label
 tablet$0$frmCreateWO.Label07311667907d440=label
@@ -200,12 +205,12 @@ tablet$0$popLongdesc.TextArea0309738acc7bb42=textarea2
 tablet$0$frmValveInspection.CopyLabel011d19559ba1048=label
 tablet$0$frmViewMoreInfo.CopyLabel09a8442b12ca94c=label
 tablet$0$frmDowntime.HBox0c75f81874c1f42=box
-tablet$0$frmCreateWO.Label0aca6fe3597e941=label
 tablet$0$frmActiveWOList.btnDueDateFilter=button
 tablet$0$frmMoreInfoList.hboxMain=box
 tablet$0$frmEditActiveWO.CopyLabel05f17e1d5648a4d=label
 tablet$0$frmViewMoreInfo.vboxNav=box
 tablet$0$popupFacSystem=popup
+tablet$0$frmCreateWO.label1568159912504315=label
 tablet$0$frmValveInspection.CopyComboBox0b9f886476ef04d=combobox
 tablet$0$frmViewActiveWO.hboxMain=box
 tablet$0$frmViewAwaitingWO.CopyButton06217ec4133174a=button
@@ -260,6 +265,7 @@ tablet$0$popupFacSubsys.lbl5=label
 tablet$0$popupFacSubsys.lbl4=label
 tablet$0$popupFacSubsys.lbl3=label
 tablet$0$popupFacSubsys.lbl2=label
+tablet$0$frmCreateWO.label1568159912511708=label
 tablet$0$popupFacSubsys.lbl1=label
 tablet$0$frmCreateWO.CopyComboBox0e3d53e26078543=combobox
 tablet$0$frmValveInspection.CopyLabel00eb8a9f125c044=label
@@ -269,6 +275,7 @@ tablet$0$frmEditActiveWO.CopyHBoxproblemCode00c73b61608514c=box
 tablet$0$frmEditActiveWO.CopyHBox0c97e7ed444a243=box
 tablet$0$frmEditActiveWO.CopyButton0f8ce1e3199d448=button
 tablet$0$popupFacSystem.hbxButtons=box
+tablet$0$frmCreateWO.hbox1568159912522866=box
 tablet$0$popupFacility.seg=segment2
 tablet$0$popupSite.CopyButton0302e6379156b45=button
 tablet$0$frmViewMoreInfo.CopyLabel00f77a45ee9e548=label
@@ -279,12 +286,12 @@ tablet$0$popupFacility.CopyButton0ccfb73b5615340=button
 tablet$0$frmViewActiveWO.CopyLabel0783a75e697474d=label
 tablet$0$popAttachments.Label00ce247c1b5bc44=label
 tablet$0$popDueDateFilter=popup
-tablet$0$frmCreateWO.CopyComboBox066b2a180a53c42=combobox
 tablet$0$frmValveInspection.CopyLabel0b2416cfad20d4e=label
 tablet$0$frmValveInspection.CopyTextField0ef96ea43eb0249=textbox2
 tablet$0$popChangeWOStatus.Button03028c36ed0fb44=button
 tablet$0$frmViewMoreInfo.CopyLabel00e429794d33c49=label
 tablet$0$popupSubEquipment.CopyButton0ccfb73b5615340=button
+tablet$0$frmCreateWO.label1568159912522220=label
 tablet$0$popupInstrument=popup
 tablet$0$frmViewMoreInfo.CopyLabel0933d517e58f64b=label
 tablet$0$frmCreateWO.cbxWorkSubcategory=combobox
@@ -304,6 +311,7 @@ tablet$0$popupFacility.lbl1=label
 tablet$0$frmCreateWO.VBox0ae5e302cb95148=box
 tablet$0$frmValveInspection.CopyLabel044b12f557bcf46=label
 tablet$0$frmCreateWO.hboxAsset=box
+tablet$0$frmCreateWO.txtInspectorName=textbox2
 tablet$0$frmMoreInfoList.navCreateWorkOrder=button
 tablet$0$frmViewMoreInfo.CopyLabel0752fd18ea8df40=label
 tablet$0$frmViewMoreInfo.navActiveWorkOrders=button
@@ -323,6 +331,7 @@ tablet$0$frmDowntime.CopyButton0026074a9ed2447=button
 tablet$0$frmValveInspection.Button06ff7fc2a4ba74b=button
 tablet$0$frmViewMoreInfo.navMoreInfo=button
 tablet$0$popPriorityFilter.CopyButton0d1454a321f8845=button
+tablet$0$frmCreateWO.label1568159912503855=label
 tablet$0$CopyHBox05ab541b50c7444=box
 tablet$0$frmViewAwaitingWO.CopyButton0b723d5d72fad4b=button
 tablet$0$frmEditActiveWO.CopyButton0128ee35641524f=button
@@ -333,6 +342,7 @@ tablet$0$frmDowntime.navCreateWorkOrder=button
 tablet$0$frmViewMoreInfo.CopyButton0a7c6edbb2be947=button
 tablet$0$popupFacSubsys.seg=segment2
 tablet$0$popAttachments.CopyHBox022f0bb539f3443=box
+tablet$0$frmCreateWO.hbxValveInspection=box
 tablet$0$popupSubEquipment=popup
 tablet$0$popupFacSubsys.CopyButton0ccfb73b5615340=button
 tablet$0$frmCreateWO.swiATF=switch
@@ -344,10 +354,12 @@ tablet$0$frmViewAwaitingWO.CopyLabel0a085706adae14a=label
 tablet$0$frmValveInspection.Button0435c6286129d44=button
 tablet$0$popPriorityFilter.hbox1568159912380697=box
 tablet$0$frmDowntime.HBoxproblemCode04765c451d1d34e=box
+tablet$0$frmCreateWO.lblTruncatedValveComment=label
 tablet$0$popupFacility.CopyButton028570489d35040=button
 tablet$0$frmDowntime.CopyButton05809a09c62a643=button
 tablet$0$popAttachments.Button0dfb95bb959a149=button
 tablet$0$frmViewActiveWO.CopyLabel07f281a084e0744=label
+tablet$0$frmCreateWO.swiLocked=switch
 tablet$0$popDueDateFilter.label1568159912388250=label
 tablet$0$frmCreateWO.CopyLabel06efe9974c73144=label
 tablet$0$popupInstrument.hbx8=box
@@ -377,6 +389,7 @@ tablet$0$frmViewMoreInfo.hboxMain=box
 tablet$0$frmCreateWO.ButtonScanbarcode=button
 tablet$0$frmApprovalWOList.navAwaitingApproval=button
 tablet$0$popWOApproval.CopyRadioButtonGroup04790a00f681f48=radiobuttongroup
+tablet$0$frmCreateWO.hbox1568159912529054=box
 tablet$0$frmCreateWO.hboxWorkType=box
 tablet$0$popupArea.CopyButton0ccfb73b5615340=button
 tablet$0$frmEditActiveWO.CopyHBoxproblemCode037af49fffd3440=box
@@ -384,6 +397,7 @@ tablet$0$frmCreateWO.hboxTitle=box
 tablet$0$frmApprovalWOList.hboxMain=box
 tablet$0$popupArea.lbl1=label
 tablet$0$CopyHBox05ab541b50c7444.CopyLabel089832aef2efe41=label
+tablet$0$frmCreateWO.label1568159912522868=label
 tablet$0$popupSite.CopyHBox0cc3ff463eadc42=box
 tablet$0$frmValveInspection.CopyTextField02665bad02df54e=textbox2
 tablet$0$frmValveInspection.HBox0b56740eae09645=box
@@ -420,6 +434,7 @@ tablet$0$frmViewAwaitingWO.CopyLabel00f77a45ee9e548=label
 tablet$0$frmViewActiveWO.CopyHBox05aa135f6dbb342=box
 tablet$0$frmEditActiveWO.navActiveWorkOrders=button
 tablet$0$frmViewAwaitingWO.Label027fba225f4ab44=label
+tablet$0$frmCreateWO.hbox1568159912509221=box
 tablet$0$popPriorityFilter.CopyButton0bcf4d218cf034e=button
 tablet$0$popLongdesc.Label0b2456e8425e14c=label
 tablet$0$frmMainMenu.Label09e53b932632649=label
@@ -453,7 +468,6 @@ tablet$0$frmDowntime=form2
 tablet$0$frmValveInspection.VBox0bd8762f0a53949=box
 tablet$0$frmViewAwaitingWO.CopyLabel0752fd18ea8df40=label
 tablet$0$frmCreateWO.hboxMain=box
-tablet$0$frmCreateWO.ComboBox0062ed8347b8446=combobox
 tablet$0$frmViewActiveWO.CopyLabel0c97888ab94614e=label
 tablet$0$popupInstrument.seg=segment2
 tablet$0$frmDowntime.vboxNav=box
@@ -464,15 +478,18 @@ tablet$0$frmViewAwaitingWO.CopyHBox08b4357c544c342=box
 tablet$0$frmCreateWO.CopyLabel0afdef52ce3ec48=label
 tablet$0$frmEditActiveWO.CopyHBox04d80fe3bc9974c=box
 tablet$0$frmCreateWO.Label0d28fb78c50c74e=label
+tablet$0$frmCreateWO.cbxRemedyCode=combobox
 tablet$0$frmActiveWOList.navAwaitingApproval=button
 tablet$0$frmValveInspection.CopyLabel020146862fb514a=label
 tablet$0$frmViewActiveWO.CopyHBox0164edd9d181b47=box
+tablet$0$frmCreateWO.button1568159912529060=button
 tablet$0$frmEditActiveWO.CopyComboBox05611e3e70d6a47=combobox
 tablet$0$frmCreateWO.CopyButtonScanbarcode0e5c2601049354c=button
 tablet$0$frmDowntime.CopyLabel07718c2ae276c41=label
 tablet$0$popDueDateFilter.calDueDate=calendar
 tablet$0$popChangeWOStatus.cbxRemedyCode=combobox
 tablet$0$frmViewActiveWO.CopyLabel0b3fdd781891947=label
+tablet$0$frmCreateWO.label1568159912529056=label
 tablet$0$popupEquipment.hbx6=box
 tablet$0$popupGGS=popup
 tablet$0$popupEquipment.hbx5=box
@@ -490,6 +507,7 @@ tablet$0$popupFacSubsys.hbx3=box
 tablet$0$popupFacSubsys.hbx2=box
 tablet$0$popupFacSubsys.hbx1=box
 tablet$0$frmValveInspection.CopyTextField0becb3bc1c46946=textbox2
+tablet$0$frmCreateWO.cbxCauseCode=combobox
 tablet$0$popAttachments=popup
 tablet$0$popChangeWOStatus.Button0ee1a260287f842=button
 tablet$0$popWOApproval=popup
@@ -506,6 +524,7 @@ tablet$0$popWOApproval.CopyLabel03190e30a9e724f=label
 tablet$0$frmEditActiveWO.CopyLabel0153b3fa9cb4742=label
 tablet$0$frmCreateWO.hboxDescription=box
 tablet$0$popupGGS.seg=segment2
+tablet$0$frmCreateWO.swiLubricated=switch
 tablet$0$frmCreateWO.navMoreInfo=button
 tablet$0$frmViewActiveWO.CopyLabel031f28d49ab994e=label
 tablet$0$popLocationFilter=popup
@@ -536,14 +555,17 @@ tablet$0$popLocationFilter.combobox1568159912394375=combobox
 tablet$0$frmViewMoreInfo.CopyLabel041c1b738c2ad44=label
 tablet$0$frmViewActiveWO.CopyLabel00d08986766644b=label
 tablet$0$frmEditActiveWO.hboxMain=box
+tablet$0$frmCreateWO.vbox1568159912503854=box
 tablet$0$frmViewActiveWO.CopyHBox068511e508f094c=box
 tablet$0$frmDowntime.CopyHBoxproblemCode0cda5c8d6f0b64c=box
 tablet$0$frmValveInspection.CopyHBoxproblemCode0046f8572b8a246=box
 tablet$0$frmEditActiveWO.CopyHBoxproblemCode0bd30cdde1ba740=box
 tablet$0$popupEquipment.hbxButtons=box
 tablet$0$HBox05936750fff9f49.Label0b7d0cd6882d349=label
+tablet$0$frmCreateWO.lblTruncatedDescription=label
 tablet$0$frmCreateWO.cbxWorkType=combobox
 tablet$0$frmValveInspection.CopyTextField0da51ecca6a4e4f=textbox2
+tablet$0$frmCreateWO.label1568159912509223=label
 tablet$0$frmEditActiveWO.CopyButton033014ad5d0e942=button
 tablet$0$frmDowntime.CopyHBoxproblemCode04762a265862f40=box
 tablet$0$frmValveInspection.TextField071bce55c3c6243=textbox2
