Display selected loc/asset hierarchy item in the Select button caption.

--- a/lua_widget_m4_info.properties
+++ b/lua_widget_m4_info.properties
@@ -1,12 +1,11 @@
 #This file contains the lua m4Constants, the widgetQualifying ids and the type of the widget
-#Wed May 28 01:52:30 EDT 2014
+#Wed May 28 12:00:56 EDT 2014
 ~|~frmDowntime.HBox0c75f81874c1f42=box
 ~|~frmValveInspection.HBox0b56740eae09645=box
 ~|~popTimePicker.CopyButton0bcf4d218cf034e=button
 ~|~frmViewAwaitingWO.CopyButton068edc55e30b44f=button
 ~|~frmCreateWO.navDowntime=button
 ~|~popupFacSubsys.hbxButtons=box
-~|~popupGGS.CopyButton0ccfb73b5615340=button
 ~|~frmViewActiveWO.CopyLabel049e0403d6ac747=label
 ~|~popTimePicker.CopyVBox0d3418e71737442=box
 ~|~frmValveInspection.CopyHBoxproblemCode09f431432eb0743=box
@@ -22,7 +21,6 @@
 ~|~frmViewActiveWO.navMoreInfo=button
 ~|~frmViewAwaitingWO.CopyLabel0933d517e58f64b=label
 ~|~frmValveInspection.CopyHBox0f8a66579044d48=box
-~|~popupSite.CopyButton0302e6379156b45=button
 ~|~popupGGS.CopyHBox03c50b568f6cf4d=box
 ~|~popLocationFilter.combobox1568159912394375=combobox
 ~|~frmViewActiveWO.navDowntime=button
@@ -55,6 +53,7 @@
 ~|~frmDowntime.navActiveWorkOrders=button
 ~|~frmViewAwaitingWO.CopyHBox043a43f721e3f44=box
 ~|~frmDowntime.CopyLabel0b1d9abb0f3424a=label
+~|~popupInstrument.btnSelect=button
 ~|~frmCreateWO.swiLocked=switch
 ~|~popupSubEquipment.hbxButtons=box
 ~|~frmValveInspection.CopyHBoxproblemCode04cda06a15b5a49=box
@@ -129,7 +128,6 @@
 ~|~frmValveInspection.CopyButton0226a251a7d2f45=button
 ~|~frmViewActiveWO.CopyHBox0164edd9d181b47=box
 ~|~frmViewAwaitingWO.Label027fba225f4ab44=label
-~|~popupArea.CopyButton0ccfb73b5615340=button
 ~|~popupGGS.hbx2=box
 ~|~popupGGS.hbx1=box
 ~|~frmCreateWO.hboxProblemCode=box
@@ -180,7 +178,6 @@
 ~|~frmViewAwaitingWO.CopyLabel0d5715dadfc7b44=label
 ~|~frmViewAwaitingWO.CopyButton0769390d0dfe14e=button
 ~|~frmViewActiveWO.Label0dd01e45bbed64e=label
-~|~popupFacSubsys.CopyButton0ccfb73b5615340=button
 ~|~popupInstrument.seg=segment2
 ~|~frmViewAwaitingWO.CopyHBox054a7688c99f04c=box
 ~|~frmDowntime.vboxNav=box
@@ -193,6 +190,7 @@
 ~|~frmValveInspection.CopyLabel0cc935cec4a4f41=label
 ~|~popupArea.CopyButton028570489d35040=button
 ~|~popChangeWOStatus=popup
+~|~popupFacSystem.btnSelect=button
 ~|~popLocationFilter.label1568159912380696=label
 ~|~frmValveInspection.CopyHBox0b3febcb0639e41=box
 ~|~frmApprovalWOList.hboxMain=box
@@ -241,6 +239,7 @@
 ~|~popTimePicker.CopyHBox09052f03a32d945=box
 ~|~frmEditActiveWO.CopyHBoxproblemCode07907a4075bf645=box
 ~|~popupGGS=popup
+~|~popupArea.btnSelect=button
 ~|~popChangeWOStatus.cbxCauseCode=combobox
 ~|~frmViewActiveWO.txtWorkDuration=textbox2
 ~|~hdrEdit=header
@@ -278,7 +277,6 @@
 ~|~frmViewAwaitingWO.CopyLabel098b20d3da7094d=label
 ~|~frmViewAwaitingWO.navDowntime=button
 ~|~frmCreateWO.CopyButton07b4dc01acbe946=button
-~|~popupInstrument.CopyButton0ccfb73b5615340=button
 ~|~frmViewAwaitingWO.vboxNav=box
 ~|~frmViewActiveWO.CopyHBox02c4896e022d34e=box
 ~|~frmCreateWO.CopyButton00efc277a014444=button
@@ -314,7 +312,6 @@
 ~|~frmViewMoreInfo.CopyLabel0f2d8e5c336284d=label
 ~|~frmDowntime.navAwaitingApproval=button
 ~|~frmViewActiveWO.CopyHBox07b6c0248cb0247=box
-~|~popupFacSystem.CopyButton0ccfb73b5615340=button
 ~|~frmCreateWO.CopyLabel02578201702ac4a=label
 ~|~frmEditActiveWO.CopyComboBox08681cb77f0ea4e=combobox
 ~|~frmCreateWO.CopyLabel0334243ede31d4f=label
@@ -365,6 +362,7 @@
 ~|~popWOApproval.CopytxtComment0f1009f615f5e46=textarea2
 ~|~frmViewMoreInfo.vboxNav=box
 ~|~frmDowntime.CopyLabel02c96feb07aba4f=label
+~|~popupFacSubsys.btnSelect=button
 ~|~popWOApproval.CopyButton03700868ebd3c4f=button
 ~|~frmViewMoreInfo.CopyLabel047f5f421bd714c=label
 ~|~popupEquipment.hbxButtons=box
@@ -436,6 +434,7 @@
 ~|~frmViewActiveWO.CopyHBox02268996263ad43=box
 ~|~frmDowntime.ComboBox01868aea2e88547=combobox
 ~|~frmValveInspection.CopyTextField0ef96ea43eb0249=textbox2
+~|~popupGGS.btnSelect=button
 ~|~frmCreateWO.button1568159912529060=button
 ~|~frmCreateWO.cbxWorkCategory=combobox
 ~|~frmDowntime.Button05f3f42155ca948=button
@@ -490,7 +489,6 @@
 ~|~frmCreateWO.hboxDescription=box
 ~|~popTimePicker.CopyButton0d1454a321f8845=button
 ~|~frmCreateWO.cbxWorkSubcategory=combobox
-~|~popupEquipment.CopyButton0ccfb73b5615340=button
 ~|~frmEditActiveWO.CopyVBox0e2dfec9a5dbb41=box
 ~|~popupGGS.lbl2=label
 ~|~popupGGS.lbl1=label
@@ -499,7 +497,6 @@
 ~|~popupFacility.CopyButton028570489d35040=button
 ~|~frmCreateWO.cbxProblemCode=combobox
 ~|~frmCreateWO.CopyComboBox0e3d53e26078543=combobox
-~|~popupSubEquipment.CopyButton0ccfb73b5615340=button
 ~|~frmViewAwaitingWO.CopyLabel00f77a45ee9e548=label
 ~|~frmActiveWOList=form2
 ~|~frmCreateWO.CopyLabel0df4ce4c5db2440=label
@@ -509,7 +506,6 @@
 ~|~popAttachments.HBox0bf1bab1918e642=box
 ~|~frmCreateWO.hboxAsset=box
 ~|~frmViewMoreInfo.CopyVBox0e0301e03413642=box
-~|~popupFacility.CopyButton0ccfb73b5615340=button
 ~|~frmValveInspection.CopyLabel0516994f31fb643=label
 ~|~frmCreateWO.CopyLabel0231d0ce05c444c=label
 ~|~frmCreateWO.cbxWorkSubtype=combobox
@@ -528,6 +524,7 @@
 ~|~popLongdesc.VBox049a8fca94aba47=box
 ~|~frmValveInspection.CopyLabel044b12f557bcf46=label
 ~|~frmValveInspection.CopyComboBox0f2eeb744183b4a=combobox
+~|~popupFacility.btnSelect=button
 ~|~popupGGS.seg=segment2
 ~|~frmDowntime.CopyLabel09cb1d3e97e584b=label
 ~|~frmDowntime.CopyButton0026074a9ed2447=button
@@ -567,11 +564,14 @@
 ~|~frmViewActiveWO.navCreateWorkOrder=button
 ~|~frmValveInspection.CopyTextField0becb3bc1c46946=textbox2
 ~|~frmEditActiveWO.CopyHBoxproblemCode037af49fffd3440=box
+~|~popupEquipment.btnSelect=button
 ~|~frmDowntime.CopyHBoxproblemCode0049cfc02e4d849=box
 ~|~popupEquipment=popup
 ~|~frmViewActiveWO.CopyLabel0d3e7dedc7fef4d=label
+~|~popupSite.btnSelect=button
 ~|~popChangeWOStatus.HBox0be54fb10f7f545=box
 ~|~frmValveInspection.CopyLabel08ab41f1ac8044b=label
+~|~popupSubEquipment.btnSelect=button
 ~|~frmViewActiveWO.CopyButton016b755f7107648=button
 ~|~frmViewMoreInfo.HBox063dff2d238b340=box
 ~|~frmCreateWO.hboxWorkSubcategory=box
