--- a/widgetinfo.properties
+++ b/widgetinfo.properties
@@ -1,5 +1,5 @@
 #
-#Wed May 28 01:52:30 EDT 2014
+#Wed May 28 12:00:56 EDT 2014
 tablet$0$frmViewMoreInfo.CopyLabel08691d38a20c54c=label
 tablet$0$frmApprovalWOList.navMoreInfo=button
 tablet$0$frmViewMoreInfo.CopyHBox0620cdd4316d042=box
@@ -33,7 +33,6 @@ tablet$0$popupSubEquipment.hbx4=box
 tablet$0$popupSubEquipment.hbx3=box
 tablet$0$popupSubEquipment.hbx2=box
 tablet$0$popupSubEquipment.hbx1=box
-tablet$0$popupEquipment.CopyButton0ccfb73b5615340=button
 tablet$0$frmValveInspection.CopyButton0226a251a7d2f45=button
 tablet$0$popTimePicker.CopyHBox09052f03a32d945=box
 tablet$0$frmEditActiveWO.CopyButtonScanbarcode04465f98f4f8c40=button
@@ -44,7 +43,6 @@ tablet$0$popupGGS.CopyHBox03c50b568f6cf4d=box
 tablet$0$popLongdesc.VBox049a8fca94aba47=box
 tablet$0$frmActiveWOList.HBox05c37b97b56e248=box
 tablet$0$frmViewMoreInfo.CopyLabel098b20d3da7094d=label
-tablet$0$popupGGS.CopyButton0ccfb73b5615340=button
 tablet$0$frmDowntime.CopyLabel02c96feb07aba4f=label
 tablet$0$frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
 tablet$0$frmValveInspection.CopyLabel0faac95a083c447=label
@@ -114,6 +112,7 @@ tablet$0$frmCreateWO.calInspectionDate=calendar
 tablet$0$frmDowntime.CopyLabel09cb1d3e97e584b=label
 tablet$0$frmActiveWOList.btnLocationFilter=button
 tablet$0$frmApprovalWOList.navActiveWorkOrders=button
+tablet$0$popupFacSystem.btnSelect=button
 tablet$0$popupGGS.CopyButton028570489d35040=button
 tablet$0$frmViewActiveWO.CopyLabel0d3e7dedc7fef4d=label
 tablet$0$popupEquipment.seg=segment2
@@ -162,11 +161,11 @@ tablet$0$frmMainMenu=form2
 tablet$0$frmCreateWO.CopyLabel04c54fb2075b049=label
 tablet$0$frmDowntime.navActiveWorkOrders=button
 tablet$0$frmEditActiveWO.CopyLabel06d31378aace348=label
-tablet$0$popupInstrument.CopyButton0ccfb73b5615340=button
 tablet$0$popLongdesc.CopyButton0f2d885d0009140=button
 tablet$0$frmViewActiveWO.CopyHBox07b6c0248cb0247=box
 tablet$0$frmCreateWO.hboxProblemCode=box
 tablet$0$popDueDateFilter.label1568159912380696=label
+tablet$0$popupSite.btnSelect=button
 tablet$0$popLocationFilter.label1568159912388250=label
 tablet$0$frmMoreInfoList.navActiveWorkOrders=button
 tablet$0$frmViewActiveWO.CopyLabel04b6703bba78b4f=label
@@ -218,6 +217,7 @@ tablet$0$popLongdesc.Button02f2cf6b23b9d4d=button
 tablet$0$frmViewMoreInfo.CopyHBox0611ef625d1b346=box
 tablet$0$popWOApproval.CopyButton03700868ebd3c4f=button
 tablet$0$popLongdesc=popup
+tablet$0$popupInstrument.btnSelect=button
 tablet$0$popupFacSystem.seg=segment2
 tablet$0$popDueDateFilter.CopyHBox087eed2ceed8d4a=box
 tablet$0$popChangeWOStatus.HBox0a4ec2ca4e08040=box
@@ -232,6 +232,7 @@ tablet$0$frmValveInspection.CopyComboBox0f2eeb744183b4a=combobox
 tablet$0$frmEditActiveWO.CopyTextField0ebcfb0af7b0743=textbox2
 tablet$0$frmViewAwaitingWO.CopyLabel0f880717279644d=label
 tablet$0$frmEditActiveWO.CopyComboBox04eeaf68aeecd47=combobox
+tablet$0$popupGGS.btnSelect=button
 tablet$0$frmViewActiveWO.CopyLabel0b329b45036ff4a=label
 tablet$0$frmEditActiveWO.CopyHBox0c701a99e47954c=box
 tablet$0$popWOApproval.CopyHBox03569c597504240=box
@@ -277,20 +278,18 @@ tablet$0$frmEditActiveWO.CopyButton0f8ce1e3199d448=button
 tablet$0$popupFacSystem.hbxButtons=box
 tablet$0$frmCreateWO.hbox1568159912522866=box
 tablet$0$popupFacility.seg=segment2
-tablet$0$popupSite.CopyButton0302e6379156b45=button
 tablet$0$frmViewMoreInfo.CopyLabel00f77a45ee9e548=label
 tablet$0$frmEditActiveWO.CopyLabel017435858ee574e=label
 tablet$0$frmValveInspection.CopyComboBox0efc3eb6e6b7049=combobox
 tablet$0$frmViewMoreInfo.CopyVBox0e0301e03413642=box
-tablet$0$popupFacility.CopyButton0ccfb73b5615340=button
 tablet$0$frmViewActiveWO.CopyLabel0783a75e697474d=label
+tablet$0$popupFacSubsys.btnSelect=button
 tablet$0$popAttachments.Label00ce247c1b5bc44=label
 tablet$0$popDueDateFilter=popup
 tablet$0$frmValveInspection.CopyLabel0b2416cfad20d4e=label
 tablet$0$frmValveInspection.CopyTextField0ef96ea43eb0249=textbox2
 tablet$0$popChangeWOStatus.Button03028c36ed0fb44=button
 tablet$0$frmViewMoreInfo.CopyLabel00e429794d33c49=label
-tablet$0$popupSubEquipment.CopyButton0ccfb73b5615340=button
 tablet$0$frmCreateWO.label1568159912522220=label
 tablet$0$popupInstrument=popup
 tablet$0$frmViewMoreInfo.CopyLabel0933d517e58f64b=label
@@ -344,7 +343,6 @@ tablet$0$popupFacSubsys.seg=segment2
 tablet$0$popAttachments.CopyHBox022f0bb539f3443=box
 tablet$0$frmCreateWO.hbxValveInspection=box
 tablet$0$popupSubEquipment=popup
-tablet$0$popupFacSubsys.CopyButton0ccfb73b5615340=button
 tablet$0$frmCreateWO.swiATF=switch
 tablet$0$popTimePicker.CopyButton0d1454a321f8845=button
 tablet$0$frmValveInspection.CopyHBoxproblemCode0060ec53c793c46=box
@@ -377,6 +375,7 @@ tablet$0$frmViewAwaitingWO.hboxMain=box
 tablet$0$frmDowntime.CopyLabel0960c3f00ddbe4a=label
 tablet$0$frmViewAwaitingWO.CopyHBox0611ef625d1b346=box
 tablet$0$frmValveInspection.Button0af027729e76c4a=button
+tablet$0$popupFacility.btnSelect=button
 tablet$0$frmActiveWOList.vboxNav=box
 tablet$0$frmValveInspection.CopyTextField09429de9ec5b14d=textbox2
 tablet$0$frmDowntime.CopyHBoxproblemCode0049cfc02e4d849=box
@@ -391,7 +390,6 @@ tablet$0$frmApprovalWOList.navAwaitingApproval=button
 tablet$0$popWOApproval.CopyRadioButtonGroup04790a00f681f48=radiobuttongroup
 tablet$0$frmCreateWO.hbox1568159912529054=box
 tablet$0$frmCreateWO.hboxWorkType=box
-tablet$0$popupArea.CopyButton0ccfb73b5615340=button
 tablet$0$frmEditActiveWO.CopyHBoxproblemCode037af49fffd3440=box
 tablet$0$frmCreateWO.hboxTitle=box
 tablet$0$frmApprovalWOList.hboxMain=box
@@ -454,7 +452,6 @@ tablet$0$frmViewAwaitingWO.vboxNav=box
 tablet$0$popWOApproval.CopyLabel04ae75e29081046=label
 tablet$0$popupArea.CopyButton028570489d35040=button
 tablet$0$popChangeWOStatus.CopyLabel0e3acf65ae3d946=label
-tablet$0$popupFacSystem.CopyButton0ccfb73b5615340=button
 tablet$0$frmValveInspection.CopyLabel0838d9a65e2e94f=label
 tablet$0$frmCreateWO.hboxRemedyCode=box
 tablet$0$popChangeWOStatus.HBox0f3bf256b7d1c47=box
@@ -482,6 +479,7 @@ tablet$0$frmCreateWO.cbxRemedyCode=combobox
 tablet$0$frmActiveWOList.navAwaitingApproval=button
 tablet$0$frmValveInspection.CopyLabel020146862fb514a=label
 tablet$0$frmViewActiveWO.CopyHBox0164edd9d181b47=box
+tablet$0$popupEquipment.btnSelect=button
 tablet$0$frmCreateWO.button1568159912529060=button
 tablet$0$frmEditActiveWO.CopyComboBox05611e3e70d6a47=combobox
 tablet$0$frmCreateWO.CopyButtonScanbarcode0e5c2601049354c=button
@@ -522,7 +520,9 @@ tablet$0$frmEditActiveWO.vboxNav=box
 tablet$0$frmValveInspection.CopyHBoxproblemCode03741490f3e2244=box
 tablet$0$popWOApproval.CopyLabel03190e30a9e724f=label
 tablet$0$frmEditActiveWO.CopyLabel0153b3fa9cb4742=label
+tablet$0$popupArea.btnSelect=button
 tablet$0$frmCreateWO.hboxDescription=box
+tablet$0$popupSubEquipment.btnSelect=button
 tablet$0$popupGGS.seg=segment2
 tablet$0$frmCreateWO.swiLubricated=switch
 tablet$0$frmCreateWO.navMoreInfo=button
